# amazon-glacier-cmd-interface

./: .gitignore  .tool-versions  Pipfile  pyproject.toml
glacier/: GlacierWrapper.py  glacier.py  glaciercorecalls.py  glacierexception.py
glacier/tests/: sns.py
