[tool.poetry]
name = "amazon-glacier-cmd-interface"
version = "0.1.0"
description = ""
authors = ["Guilherme Garnier <guilherme.garnier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2022.7.1"
prettytable = "^3.6.0"
boto = "^2.49.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
